Fix cut off of the focus on product-card, change h3 to link.

--- a/src/styles/components/home/_products.scss
+++ b/src/styles/components/home/_products.scss
@@ -4,7 +4,7 @@
   padding-block: 0 54px;
   display: flex;
   flex-direction: column;
-  gap: 48px;
+  gap: 46px;
 
   @include tab {
     padding-block: 0 110px;
@@ -34,11 +34,10 @@
     justify-content: space-between;
 
     &--padding {
-      padding-inline: 16px 0;
-      padding-block-end: 10px;
+      padding: 2px 0 10px 16px;
 
       @include tab {
-        padding-inline: 40px 0;
+        padding-left: 40px;
       }
 
       @include desk {
